--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,8 +26,29 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+
+input, textarea{
+  @apply border-2 border-gray-200 rounded-md p-1 w-full;
+  @apply mb-2;
+}
+input:focus {
+  @apply border-blue-900;
+}
+label{
+  @apply text-blue-900;
+}
+.btn-primary{
+  @apply bg-blue-900 text-white p-2 pl-3 pr-3  rounded-md
+}
+table.basic {
+  @apply w-full
+}
+table.basic thead tr td{
+  @apply bg-blue-100  ;
+}
+table.basic tr td{
+  @apply border border-gray-200 p-1
+}
+table.basic a{
+  @apply bg-blue-900 text-white text-sm p-1 rounded-md inline-flex
 }
