--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,39 +16,51 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1{
+  @apply text-gray-800 mb-4 text-xl;
 }
-
-
-input, textarea{
-  @apply border-2 border-gray-200 rounded-md p-1 w-full;
+input, textarea, select {
+  @apply border border-gray-200 rounded-sm p-2  w-full;
   @apply mb-2;
 }
-input:focus {
+
+input:focus, textarea:focus, select:focus {
   @apply border-blue-900;
 }
-label{
-  @apply text-blue-900;
+
+label {
+  @apply text-gray-500 text-sm;
 }
-.btn-primary{
-  @apply bg-blue-900 text-white p-2 pl-3 pr-3  rounded-md
+
+.btn-primary {
+  @apply bg-primary text-white p-2 pl-3 pr-3 rounded-sm shadow-sm;
 }
+
 table.basic {
-  @apply w-full
+  @apply w-full bg-white rounded-sm shadow-sm;
 }
-table.basic thead tr td{
-  @apply bg-blue-100  ;
+
+table.basic thead tr td {
+  @apply text-sm  text-gray-600 uppercase border-b border-gray-200 px-4 pt-2;
 }
-table.basic tr td{
-  @apply border border-gray-200 p-1
+
+table.basic tr td {
+  @apply   p-2 pb-3;
 }
-table.basic a{
-  @apply bg-blue-900 text-white text-sm p-1 rounded-md inline-flex
+
+table.basic a {
+  @apply  inline-flex mx-1 items-center gap-1    text-sm pl-3 pr-3 rounded-sm ;
 }
+.btn-red {
+  @apply bg-red-200 text-red-600  p-2 pl-3 pr-3    shadow-sm;
+}
+
+.btn-default , .btn-red {
+  @apply px-4 py-1 rounded-sm   ;
+}
+
+.btn-default {
+  @apply bg-white text-gray-800 border border-gray-200 rounded-sm;
+}
+
+
