--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,8 +39,8 @@ label {
 table.basic {
   @apply w-full bg-white rounded-sm shadow-sm;
 }
-
-table.basic thead tr td {
+table.basic thead tr th
+,table.basic thead tr td {
   @apply text-sm  text-gray-600 uppercase border-b border-gray-200 px-4 pt-2;
 }
 
